Summery: Fix alignment issues

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,12 @@
   }
 }
 
+@media (min-width: 1024px) {
+  html {
+    zoom: 1.1;
+  }
+}
+
 ::webkit-scrollbar {
   width: 10px;
 }
